--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 
 <IfModule mod_rewrite.c>
 	RewriteEngine On
-	RewriteBase "/jakartabarbierun/"
+	RewriteBase "/jbr2023/"
 	#RewriteRule ^(.*)$ pagemanager.php?test=$1 [L,QSA]
 	RewriteRule ^home$ index.php [L]
 	#RewriteRule ^race_info$ race_info.php [L]
